--- a/src/chart.css
+++ b/src/chart.css
@@ -5,7 +5,7 @@
   --dark-brown: hsl(25, 47%, 15%);
   --medium-brown: hsl(28, 10%, 53%);
   --cream: hsl(27, 66%, 92%);
-  --very-pale-orange: hsl(33, 100%, 98%); 
+  --very-pale-orange: hsl(33, 100%, 98%);
 
   /* Gap */
   --gap-0: 0px;
@@ -58,7 +58,7 @@
   --radius-2: 4px;
   --radius-3: 6px;
   --radius-4: 8px;
-  --radius-5: 10px; 
+  --radius-5: 10px;
   --radius-6: 12px;
   --radius-7: 16px;
   --radius-8: 20px;
@@ -74,7 +74,7 @@
 
   /* Typography */
   --ff-DM-Sans-sans-serif: var(--ff-DM-Sans), sans-serif;
-  --ff-DM-Sans: 'DM Sans';
+  --ff-DM-Sans: "DM Sans";
   --fw-100: 100;
   --fw-200: 200;
   --fw-300: 300;
@@ -83,7 +83,7 @@
   --fw-600: 600;
   --fw-700: 700;
   --fw-800: 800;
-  --font-style: normal; 
+  --font-style: normal;
   --line-height-none: 1;
   --line-height-tight: 1.25;
   --line-height-snug: 1.375;
@@ -98,44 +98,46 @@
   --letter-spacing-widest: 0.1em;
 
   /* Font sizes */
-  --font-size-0: clamp(0.74rem, 0.684rem + 0.282vw, 0.938rem); 
+  --font-size-0: clamp(0.74rem, 0.684rem + 0.282vw, 0.938rem);
   --font-size-1: clamp(0.938rem, 0.884rem + 0.268vw, 1.125rem);
-  --font-size-3: clamp(1.5rem, 1.357rem + 0.714vw, 2rem); 
+  --font-size-3: clamp(1.5rem, 1.357rem + 0.714vw, 2rem);
   --font-size-4: clamp(1.875rem, 1.554rem + 1.607vw, 3rem);
 
   /* Spacing */
-  --space-1: clamp(0.25rem, 0.179rem + 0.357vw, 0.5rem); 
+  --space-1: clamp(0.25rem, 0.179rem + 0.357vw, 0.5rem);
   --space-2: clamp(0.5rem, 0.446rem + 0.271vw, 0.69rem);
   --space-3: clamp(0.75rem, 0.644rem + 0.529vw, 1.12rem);
-  --space-4: clamp(1.25rem, 1.124rem + 0.629vw, 1.69rem); 
-  --space-5: clamp(1.25rem, 1.036rem + 1.071vw, 2rem); 
-  --space-6: clamp(1.25rem, 0.893rem + 1.786vw, 2.5rem); 
-  --space-7: clamp(1.38rem, 1.329rem + 0.257vw, 1.56rem); 
-  --space-8: clamp(1.5rem, 1.357rem + 0.714vw, 2rem); 
+  --space-4: clamp(1.25rem, 1.124rem + 0.629vw, 1.69rem);
+  --space-5: clamp(1.25rem, 1.036rem + 1.071vw, 2rem);
+  --space-6: clamp(1.25rem, 0.893rem + 1.786vw, 2.5rem);
+  --space-7: clamp(1.38rem, 1.329rem + 0.257vw, 1.56rem);
+  --space-8: clamp(1.5rem, 1.357rem + 0.714vw, 2rem);
   --space-9: clamp(1.5rem, 1.197rem + 1.514vw, 2.56rem);
   --space-10: clamp(3.25rem, 2.999rem + 1.257vw, 4.13rem);
 }
 
 /* CSS Resets -> https://piccalil.li/blog/a-more-modern-css-reset/ */
 * {
-  margin: 0; 
-  padding: 0; 
+  margin: 0;
+  padding: 0;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 /* Remove all list styles with ol, ul elements with a list role which suggest default styling will be removed. */
-ul[role="list"], 
+ul[role="list"],
 ol[role="list"] {
   list-style: none;
 }
 
 /* Set the root defaults */
 html {
-  font-family: var(--ff-DM-Sans-sans-serif); 
-  overflow: hidden; 
+  font-family: var(--ff-DM-Sans-sans-serif);
+  overflow: hidden;
   /* Read up on text-adjust before implementing */
 }
 
@@ -144,28 +146,43 @@ html:focus-within {
 }
 
 body {
-  min-height: 100vh; 
-  width: 100%; 
+  min-height: 100vh;
+  width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--cream);
-  text-rendering:optimizeSpeed;
+  text-rendering: optimizeSpeed;
   line-height: var(--line-height-normal);
 }
 
 /* Set shorter line-height for interactive elements  */
-h1, h2, h3, h4, button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: var(--line-height-none);
 }
 
 /* We need to ensure that any overflow of text is have the words broken */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
 /* Balance the text wrapping on headings */
-h1, h2, h3, h4 {
-  text-wrap:balance; 
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
 }
 
 /* Any anchor element that does not have a class attribute should get the default styles */
@@ -175,9 +192,10 @@ a:not([class]) {
 }
 
 /* Make images easier to work with */
-img, picture {
-  max-width: 100%; 
-  display: var(--block); 
+img,
+picture {
+  max-width: 100%;
+  display: var(--block);
   height: auto;
 }
 
@@ -185,37 +203,40 @@ img, picture {
 button {
   background: none;
   appearance: none;
-  border: none; 
+  border: none;
 }
 
 /* Inherit the fonts for these elements */
-input, button, textarea, select {
-  font-family: inherit; 
+input,
+button,
+textarea,
+select {
+  font-family: inherit;
   font-size: inherit;
 }
 
 /* Text areas without rows should not be tiny */
 textarea:not([rows]) {
-  min-height: 10em; 
+  min-height: 10em;
 }
 
 /* Anything that has been anchored to should have an extra scroll margin */
 :target {
-  scroll-margin-block: 5ex; 
+  scroll-margin-block: 5ex;
 }
 
 /* Remove all animations, transitions, and scrolling for people that do not want them */
-@media(prefers-reduced-motion:reduce) {
+@media (prefers-reduced-motion: reduce) {
   html:focus-within {
     scroll-behavior: auto;
   }
 
-  *, *::before, *::after {
+  *,
+  *::before,
+  *::after {
     scroll-behavior: auto !important;
     animation-duration: 0.01ms !important;
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
   }
 }
-
-
