--- a/src/chart.css
+++ b/src/chart.css
@@ -107,6 +107,8 @@
   --font-size-5: clamp(1.5rem, 1.357rem + 0.714vw, 2rem);
   --font-size-6: clamp(1.875rem, 1.554rem + 1.607vw, 3rem);
   --font-size-7: clamp(0.208rem, 0rem + 1.042vw, 0.938rem);
+  --font-size-8: clamp(2.59rem, 2.341rem + 1.243vw, 3.46rem);
+  --font-size-9: clamp(0.75rem, 0.607rem + 0.714vw, 1.25rem);
 
   /* Spacing */
   --space-1: clamp(0.25rem, 0.179rem + 0.357vw, 0.5rem);
@@ -365,8 +367,6 @@ textarea:not([rows]) {
   background-color: var(--soft-red);
   position: relative;
   border-radius: clamp(0.188rem, 0.152rem + 0.179vw, 0.313rem);
-  position: relative;
-
   transition: padding 3s ease-in;
 }
 
@@ -386,7 +386,6 @@ textarea:not([rows]) {
 }
 
 .expense-chart td {
-  /* position: absolute; */
   color: var(--white);
   background-color: var(--dark-brown);
   font-size: var(--font-size-0);
@@ -396,6 +395,10 @@ textarea:not([rows]) {
   padding: var(--space-12);
   border-radius: clamp(0.069rem, 0rem + 0.347vw, 0.313rem);
   top: -2.06rem;
+}
+
+.expense-chart td[class="hide"] {
+  display:var(--hidden);
 }
 
 @media only screen and (min-width: 64em) {
@@ -478,4 +481,76 @@ textarea:not([rows]) {
 /* In this event that we get back a valid response then it means the request is successful */
 .hide.failure {
   display: var(--hidden);
+}
+
+
+picture img {
+  width: 15.625rem; 
+  height: 15.625rem;
+  margin-inline: auto; 
+}
+
+
+.failure__message, .failure__response-status {
+  text-align: center;
+  font-style: normal; 
+  font-size: var(--font-size-9);
+  font-weight: var(--fw-700);
+  line-height: var(--line-height-normal);
+  color: var(--dark-brown);
+}
+
+.failure__message strong {
+  display: var(--block);
+  font-size: var(--font-size-8);
+  font-style: normal;
+  line-height: var(--line-height-snug);
+  font-weight: var(--fw-900);
+}
+
+button[class="btn-refresh"] {
+  display: var(--flex);
+  align-items: center;
+  justify-content: center;
+  background-color: var(--cyan);
+  text-align: center;
+  gap: 0.5rem;
+  cursor: pointer; 
+  color: var(--dark-brown);
+  margin-inline: auto;
+  padding-block: clamp(0.38rem, 0.346rem + 0.171vw, 0.5rem);
+  padding-inline: 2.34rem;
+  border-radius: var(--radius-9);
+  font-size: var(--font-size-3); 
+  font-style: normal; 
+  font-weight: var(--fw-400); 
+  transition: background-color 0.3s ease-in, transform 0.4s ease-out;
+}
+
+@media (any-hover: hover) {
+  button[class="btn-refresh"] {
+    position: relative;
+  }
+
+  button::before {
+    content: "";
+    position: absolute;
+    bottom: 0; 
+    left: 39px; 
+    padding-block: 3px;
+    width: calc(100% - 4.68rem);
+    background-color: var(--cyan);
+    transform-origin: center;
+    transition: transform 0.5s ease-out;
+    transform: scaleX(0);
+  }
+
+  button:is(:hover) {
+    background-color: transparent; 
+    transform: translateY(-5px);
+  }
+
+  button:is(:hover)::before {
+    transform: scaleX(1);
+  }
 }
